crates/pgls_pretty_print/tests/snapshots/multi/tests__create_table_like_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_table_like_100.sql
snapshot_kind: text
---
CREATE TABLE inhx (xx TEXT DEFAULT 'text');

CREATE TABLE ctla (aa TEXT);

CREATE TABLE ctlb (bb TEXT)
INHERITS (ctla);

CREATE TABLE foo (LIKE nonexistent);

CREATE TABLE inhe (ee TEXT, LIKE inhx)
INHERITS (ctlb);

INSERT INTO inhe VALUES ('ee-col1', 'ee-col2', DEFAULT, 'ee-col4');

SELECT * FROM inhe;

SELECT * FROM inhx;

SELECT * FROM ctlb;

SELECT * FROM ctla;

CREATE TABLE inhf (LIKE inhx, LIKE inhx);

CREATE TABLE inhf (LIKE inhx INCLUDING CONSTRAINTS INCLUDING DEFAULTS);

INSERT INTO inhf DEFAULT VALUES;

SELECT * FROM inhf;

ALTER TABLE inhx
  ADD CONSTRAINT "foo" CHECK (xx = 'text');

ALTER TABLE inhx
  ADD PRIMARY KEY (xx);

CREATE TABLE inhg (LIKE inhx);

INSERT INTO inhg VALUES ('foo');

DROP TABLE "inhg";

CREATE TABLE inhg (x TEXT, LIKE inhx INCLUDING CONSTRAINTS, y TEXT);

INSERT INTO inhg VALUES ('x', 'text', 'y');

INSERT INTO inhg VALUES ('x', 'text', 'y');

INSERT INTO inhg VALUES ('x', 'foo', 'y');

SELECT * FROM inhg;

DROP TABLE "inhg";

CREATE TABLE test_like_id_1 (a BIGINT GENERATED ALWAYS AS IDENTITY, b TEXT);

INSERT INTO test_like_id_1 (b) VALUES ('b1');

SELECT * FROM test_like_id_1;

CREATE TABLE test_like_id_2 (LIKE test_like_id_1);

INSERT INTO test_like_id_2 (b) VALUES ('b2');

SELECT * FROM test_like_id_2;

CREATE TABLE test_like_id_3 (LIKE test_like_id_1 INCLUDING IDENTITY);

INSERT INTO test_like_id_3 (b) VALUES ('b3');

SELECT * FROM test_like_id_3;

DROP TABLE "test_like_id_1", "test_like_id_2", "test_like_id_3";

INSERT INTO test_like_gen_1 (a) VALUES (1);

SELECT * FROM test_like_gen_1;

CREATE TABLE test_like_gen_2 (LIKE test_like_gen_1);

INSERT INTO test_like_gen_2 (a) VALUES (1);

SELECT * FROM test_like_gen_2;

CREATE TABLE test_like_gen_3 (LIKE test_like_gen_1 INCLUDING GENERATED);

INSERT INTO test_like_gen_3 (a) VALUES (1);

SELECT * FROM test_like_gen_3;

DROP TABLE "test_like_gen_1", "test_like_gen_2", "test_like_gen_3";

CREATE TABLE test_like_4 (
  b INT DEFAULT 42,
  c INT GENERATED ALWAYS AS (a * 2) STORED,
  a INT CHECK (a > 0)
);

CREATE TABLE test_like_4a (LIKE test_like_4);

CREATE TABLE test_like_4b (LIKE test_like_4 INCLUDING DEFAULTS);

CREATE TABLE test_like_4c (LIKE test_like_4 INCLUDING GENERATED);

CREATE TABLE test_like_4d (LIKE test_like_4 INCLUDING DEFAULTS INCLUDING GENERATED);

INSERT INTO test_like_4a (a) VALUES (11);

SELECT a, b, c FROM test_like_4a;

INSERT INTO test_like_4b (a) VALUES (11);

SELECT a, b, c FROM test_like_4b;

INSERT INTO test_like_4c (a) VALUES (11);

SELECT a, b, c FROM test_like_4c;

INSERT INTO test_like_4d (a) VALUES (11);

SELECT a, b, c FROM test_like_4d;

CREATE TABLE test_like_5 (x point, y point, z point);

CREATE TABLE test_like_5x (p INT CHECK (p > 0), q INT GENERATED ALWAYS AS (p * 2) STORED);

CREATE TABLE test_like_5c (LIKE test_like_4 INCLUDING ALL)
INHERITS (test_like_5,
test_like_5x);

CREATE TABLE test_like_6 (a INT, c TEXT, b TEXT);

CREATE STATISTICS ext_stat ON (a || b) FROM test_like_6;

ALTER TABLE test_like_6
  DROP COLUMN c;

CREATE TABLE test_like_6c (LIKE test_like_6 INCLUDING ALL);

DROP TABLE "test_like_4", "test_like_4a", "test_like_4b", "test_like_4c", "test_like_4d";

DROP TABLE "test_like_5", "test_like_5x", "test_like_5c";

DROP TABLE "test_like_6", "test_like_6c";

CREATE TABLE inhg (x TEXT, LIKE inhx INCLUDING INDEXES, y TEXT);

INSERT INTO inhg VALUES (5, 10);

INSERT INTO inhg VALUES (20, 10);

DROP TABLE "inhg";

CREATE TABLE inhg (x TEXT, LIKE inhx INCLUDING INDEXES, PRIMARY KEY (x));

CREATE TABLE inhz (xx TEXT DEFAULT 'text', yy INT UNIQUE);

CREATE UNIQUE INDEX "inhz_xx_idx"
ON inhz
USING btree
(
  xx
)
WHERE
  xx <> 'test';

CREATE TABLE inhg (x TEXT UNIQUE, LIKE inhz INCLUDING INDEXES);

INSERT INTO inhg (xx, yy, x) VALUES ('test', 5, 10);

INSERT INTO inhg (xx, yy, x) VALUES ('test', 10, 15);

INSERT INTO inhg (xx, yy, x) VALUES ('foo', 10, 15);

DROP TABLE "inhg";

DROP TABLE "inhz";

CREATE TABLE inhz (x TEXT REFERENCES inhz, LIKE inhx INCLUDING INDEXES);

DROP TABLE "inhz";

ALTER TABLE ctlt1
  ADD CONSTRAINT "cc" CHECK (length(b) > 100) NOT VALID;

CREATE INDEX "ctlt1_b_key"
ON ctlt1
USING btree
(
  b
);

CREATE INDEX "ctlt1_fnidx"
ON ctlt1
USING btree
(
  (a || b)
);

CREATE STATISTICS ctlt1_a_b_stat ON "a", "b" FROM ctlt1;

CREATE STATISTICS ctlt1_expr_stat ON (a || b) FROM ctlt1;

COMMENT ON STATISTICS ctlt1_a_b_stat IS 'ab stats';

COMMENT ON STATISTICS ctlt1_expr_stat IS 'ab expr stats';

COMMENT ON COLUMN ctlt1.a IS 'A';

COMMENT ON COLUMN ctlt1.b IS 'B';

COMMENT ON CONSTRAINT ctlt1_a_check ON ctlt1 IS 't1_a_check';

COMMENT ON INDEX ctlt1_pkey IS 'index pkey';

COMMENT ON INDEX ctlt1_b_key IS 'index b_key';

ALTER TABLE ctlt1
  ALTER COLUMN a SET STORAGE main;

CREATE TABLE ctlt2 (c TEXT NOT NULL);

ALTER TABLE ctlt2
  ALTER COLUMN c SET STORAGE external;

COMMENT ON COLUMN ctlt2.c IS 'C';

COMMENT ON CONSTRAINT ctlt2_c_not_null ON ctlt2 IS 't2_c_not_null';

CREATE TABLE ctlt3 (a TEXT CHECK (length(a) < 5), c TEXT CHECK (length(c) < 7));

ALTER TABLE ctlt3
  ALTER COLUMN c SET STORAGE external;

ALTER TABLE ctlt3
  ALTER COLUMN a SET STORAGE main;

CREATE INDEX "ctlt3_fnidx"
ON ctlt3
USING btree
(
  (a || c)
);

COMMENT ON COLUMN ctlt3.a IS 'A3';

COMMENT ON COLUMN ctlt3.c IS 'C';

COMMENT ON CONSTRAINT ctlt3_a_check ON ctlt3 IS 't3_a_check';

CREATE TABLE ctlt4 (a TEXT, c TEXT);

ALTER TABLE ctlt4
  ALTER COLUMN c SET STORAGE external;

CREATE TABLE ctlt12_storage (LIKE ctlt1 INCLUDING STORAGE, LIKE ctlt2 INCLUDING STORAGE);

CREATE TABLE ctlt12_comments (LIKE ctlt1 INCLUDING COMMENTS, LIKE ctlt2 INCLUDING COMMENTS);

SELECT
  conname,
  description
FROM
  pg_description,
  pg_constraint AS c
WHERE
  classoid = CAST('pg_constraint' AS REGCLASS) AND
  objoid = c.oid AND
  c.conrelid = CAST('ctlt12_comments' AS REGCLASS);

CREATE TABLE ctlt1_inh (LIKE ctlt1 INCLUDING COMMENTS INCLUDING CONSTRAINTS)
INHERITS (ctlt1);

SELECT
  description
FROM
  pg_description,
  pg_constraint AS c
WHERE
  classoid = CAST('pg_constraint' AS REGCLASS) AND
  objoid = c.oid AND
  c.conrelid = CAST('ctlt1_inh' AS REGCLASS);

CREATE TABLE ctlt13_inh ()
INHERITS (ctlt1,
ctlt3);

CREATE TABLE ctlt13_like (
  LIKE ctlt3
  INCLUDING COMMENTS
  INCLUDING CONSTRAINTS
  INCLUDING INDEXES
  INCLUDING STORAGE
)
INHERITS (ctlt1);

SELECT
  description
FROM
  pg_description,
  pg_constraint AS c
WHERE
  classoid = CAST('pg_constraint' AS REGCLASS) AND
  objoid = c.oid AND
  c.conrelid = CAST('ctlt13_like' AS REGCLASS);

CREATE TABLE ctlt_all (LIKE ctlt1 INCLUDING ALL);

SELECT
  c.relname,
  objsubid,
  description
FROM
  pg_description,
  pg_index AS i,
  pg_class AS c
WHERE
  classoid = CAST('pg_class' AS REGCLASS) AND
  objoid = i.indexrelid AND
  c.oid = i.indexrelid AND
  i.indrelid = CAST('ctlt_all' AS REGCLASS)
ORDER BY c.relname,
  objsubid;

SELECT
  s.stxname,
  objsubid,
  description
FROM
  pg_description,
  pg_statistic_ext AS s
WHERE
  classoid = CAST('pg_statistic_ext' AS REGCLASS) AND
  objoid = s.oid AND
  s.stxrelid = CAST('ctlt_all' AS REGCLASS)
ORDER BY s.stxname,
  objsubid;

CREATE TABLE inh_error1 ()
INHERITS (ctlt1,
ctlt4);

CREATE TABLE inh_error2 (LIKE ctlt4 INCLUDING STORAGE)
INHERITS (ctlt1);

CREATE TABLE pg_attrdef (LIKE ctlt1 INCLUDING ALL);

DROP TABLE "public"."pg_attrdef";

BEGIN;

CREATE SCHEMA "ctl_schema";

SET LOCAL search_path TO ctl_schema, public;

CREATE TABLE ctlt1 (LIKE ctlt1 INCLUDING ALL);

ROLLBACK;

DROP TABLE
"ctlt1",
"ctlt2",
"ctlt3",
"ctlt4",
"ctlt12_storage",
"ctlt12_comments",
"ctlt1_inh",
"ctlt13_inh",
"ctlt13_like",
"ctlt_all",
"ctla",
"ctlb" CASCADE;

COMMENT ON CONSTRAINT noinh_con_copy_b_not_null ON noinh_con_copy IS 'not null b';

COMMENT ON CONSTRAINT noinh_con_copy_c_not_null ON noinh_con_copy IS 'not null c no inherit';

CREATE TABLE noinh_con_copy1 (LIKE noinh_con_copy INCLUDING COMMENTS INCLUDING CONSTRAINTS);

SELECT
  conname,
  description
FROM
  pg_description,
  pg_constraint AS c
WHERE
  classoid = CAST('pg_constraint' AS REGCLASS) AND
  objoid = c.oid AND
  c.conrelid = CAST('noinh_con_copy1' AS REGCLASS)
ORDER BY conname COLLATE "C";

CREATE TABLE noinh_con_copy1_parted (LIKE noinh_con_copy INCLUDING ALL)
PARTITION BY LIST(a);

DROP TABLE "noinh_con_copy", "noinh_con_copy1";

CREATE TABLE ctlt4 (a INT, b TEXT);

CREATE SEQUENCE ctlseq1;

CREATE TABLE ctlt10 (LIKE ctlseq1);

CREATE VIEW ctlv1
AS SELECT * FROM ctlt4;

CREATE TABLE ctlt11 (LIKE ctlv1);

CREATE TABLE ctlt11a (LIKE ctlv1 INCLUDING ALL);

CREATE TYPE ctlty1 AS ( a INT, b TEXT );

CREATE TABLE ctlt12 (LIKE ctlty1);

DROP SEQUENCE "ctlseq1";

DROP TYPE ctlty1;

DROP VIEW "ctlv1";

DROP TABLE IF EXISTS "ctlt4", "ctlt10", "ctlt11", "ctlt11a", "ctlt12";

CREATE FOREIGN DATA WRAPPER ctl_dummy;

CREATE SERVER ctl_s0 FOREIGN DATA WRAPPER ctl_dummy;

CREATE TABLE ctl_table (
  a INT PRIMARY KEY,
  b VARCHAR COMPRESSION pglz,
  c INT GENERATED ALWAYS AS (a * 2) STORED,
  d BIGINT GENERATED ALWAYS AS IDENTITY,
  e INT DEFAULT 1
);

CREATE INDEX "ctl_table_a_key"
ON ctl_table
USING btree
(
  a
);

COMMENT ON COLUMN ctl_table.b IS 'Column b';

CREATE STATISTICS ctl_table_stat ON "a", "b" FROM ctl_table;

ALTER TABLE ctl_table
  ADD CONSTRAINT "foo" CHECK (b = 'text');

ALTER TABLE ctl_table
  ALTER COLUMN b SET STORAGE main;

CREATE FOREIGN TABLE ctl_foreign_table1 ( LIKE ctl_table ) SERVER ctl_s0;

SELECT
  attname,
  attcompression
FROM
  pg_attribute
WHERE
  attrelid = CAST('ctl_foreign_table1' AS REGCLASS) AND
  attnum > 0
ORDER BY attnum;

CREATE FOREIGN TABLE ctl_foreign_table2 ( LIKE ctl_table INCLUDING ALL ) SERVER ctl_s0;

SELECT
  attname,
  attcompression
FROM
  pg_attribute
WHERE
  attrelid = CAST('ctl_foreign_table2' AS REGCLASS) AND
  attnum > 0
ORDER BY attnum;

DROP TABLE "ctl_table";

DROP FOREIGN TABLE "ctl_foreign_table1";

DROP FOREIGN TABLE "ctl_foreign_table2";

DROP FOREIGN DATA WRAPPER ctl_dummy CASCADE;
