crates/pgls_pretty_print/tests/snapshots/multi/tests__create_type_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/create_type_100.sql
snapshot_kind: text
---
CREATE FUNCTION widget_in(cstring)
RETURNS widget
AS 'regresslib'
LANGUAGE "c"
STRICT
IMMUTABLE;

CREATE FUNCTION widget_out(widget)
RETURNS cstring
AS 'regresslib'
LANGUAGE "c"
STRICT
IMMUTABLE;

CREATE FUNCTION int44in(cstring)
RETURNS city_budget
AS 'regresslib'
LANGUAGE "c"
STRICT
IMMUTABLE;

CREATE FUNCTION int44out(city_budget)
RETURNS cstring
AS 'regresslib'
LANGUAGE "c"
STRICT
IMMUTABLE;

CREATE TYPE widget
(
  internallength = 24,
  input = widget_in,
  output = widget_out,
  typmod_in = numerictypmodin,
  typmod_out = numerictypmodout,
  alignment = double
);

CREATE TYPE city_budget
(
  internallength = 16,
  input = int44in,
  output = int44out,
  element = INT,
  category = 'x',
  preferred = 'true'
);

CREATE TYPE shell;

CREATE TYPE shell;

DROP TYPE shell;

DROP TYPE shell;

CREATE TYPE myshell;

CREATE TYPE int42;

CREATE TYPE text_w_default;

CREATE FUNCTION int42_in(cstring)
RETURNS int42
AS 'int4in'
LANGUAGE "internal"
STRICT
IMMUTABLE;

CREATE FUNCTION int42_out(int42)
RETURNS cstring
AS 'int4out'
LANGUAGE "internal"
STRICT
IMMUTABLE;

CREATE FUNCTION text_w_default_in(cstring)
RETURNS text_w_default
AS 'textin'
LANGUAGE "internal"
STRICT
IMMUTABLE;

CREATE FUNCTION text_w_default_out(text_w_default)
RETURNS cstring
AS 'textout'
LANGUAGE "internal"
STRICT
IMMUTABLE;

CREATE TYPE int42
(
  internallength = 4,
  input = int42_in,
  output = int42_out,
  alignment = INT,
  "default" = 42,
  passedbyvalue
);

CREATE TYPE text_w_default
(
  internallength = variable,
  input = text_w_default_in,
  output = text_w_default_out,
  alignment = INT,
  "default" = 'zippo'
);

CREATE TABLE default_test (f1 text_w_default, f2 int42);

INSERT INTO default_test DEFAULT VALUES;

SELECT * FROM default_test;

CREATE TYPE bogus_type;

CREATE TYPE bogus_type
(
  "Internallength" = 4,
  "Input" = int42_in,
  "Output" = int42_out,
  "Alignment" = INT,
  "Default" = 42,
  "Passedbyvalue"
);

CREATE TYPE bogus_type ( input = array_in, output = array_out, element = INT, internallength = 32);

DROP TYPE bogus_type;

CREATE TYPE bogus_type ( input = array_in, output = array_out, element = INT, internallength = 32);

CREATE TYPE default_test_row AS ( f1 text_w_default, f2 int42 );

CREATE FUNCTION get_default_test()
RETURNS SETOF default_test_row
AS '
  SELECT * FROM default_test;
'
LANGUAGE "sql";

SELECT * FROM get_default_test();

COMMENT ON TYPE bad IS 'bad comment';

COMMENT ON TYPE default_test_row IS 'good comment';

COMMENT ON TYPE default_test_row IS NULL;

COMMENT ON COLUMN default_test_row.nope IS 'bad comment';

COMMENT ON COLUMN default_test_row.f1 IS 'good comment';

COMMENT ON COLUMN default_test_row.f1 IS NULL;

CREATE TYPE text_w_default;

DROP TYPE default_test_row CASCADE;

DROP TABLE "default_test";

CREATE TYPE base_type;

CREATE FUNCTION base_fn_in(cstring)
RETURNS base_type
AS 'boolin'
LANGUAGE "internal"
IMMUTABLE
STRICT;

CREATE FUNCTION base_fn_out(base_type)
RETURNS cstring
AS 'boolout'
LANGUAGE "internal"
IMMUTABLE
STRICT;

CREATE TYPE base_type ( input = base_fn_in, output = base_fn_out);

DROP FUNCTION base_fn_in(cstring);

DROP FUNCTION base_fn_out(base_type);

DROP TYPE base_type;

DROP TYPE base_type CASCADE;

CREATE TEMPORARY TABLE mytab (foo widget(42, 13, 7));

CREATE TEMPORARY TABLE mytab (foo widget(42, 13));

SELECT
  format_type(atttypid, atttypmod)
FROM
  pg_attribute
WHERE
  attrelid = CAST('mytab' AS REGCLASS) AND
  attnum > 0;

INSERT INTO mytab
VALUES
  ('(1,2,3)'),
  ('(-44,5.5,12)');

SELECT * FROM mytab;

SELECT format_type(CAST('varchar' AS REGTYPE), 42);

SELECT format_type(CAST('bpchar' AS REGTYPE), NULL);

SELECT format_type(CAST('bpchar' AS REGTYPE), -1);

SELECT pg_input_is_valid('(1,2,3)', 'widget');

SELECT pg_input_is_valid('(1,2)', 'widget');

SELECT pg_input_is_valid('{"(1,2,3)"}', 'widget[]');

SELECT pg_input_is_valid('{"(1,2)"}', 'widget[]');

SELECT pg_input_is_valid('("(1,2,3)")', 'mytab');

SELECT pg_input_is_valid('("(1,2)")', 'mytab');

CREATE FUNCTION pt_in_widget(point, widget)
RETURNS BOOLEAN
AS 'regresslib'
LANGUAGE "c"
STRICT;

CREATE OPERATOR <% (LEFTARG = point,
RIGHTARG = widget,
PROCEDURE = pt_in_widget,
COMMUTATOR = >%,
NEGATOR = >=%);

SELECT
  CAST('(1,2)' AS point) <% CAST('(0,0,3)' AS widget)
  AS t,
  CAST('(1,2)' AS point) <% CAST('(0,0,1)' AS widget)
  AS f;

CREATE TABLE city (name NAME, location box, budget city_budget);

INSERT INTO city
VALUES
  ('Podunk', '(1,2),(3,4)', '100,127,1000'),
  (
    'Gotham',
    '(1000,34),(1100,334)',
    '123456,127,-1000,6789'
  );

SELECT * FROM city;

CREATE TYPE myvarchar;

CREATE FUNCTION myvarcharin(cstring, OID, INT)
RETURNS myvarchar
LANGUAGE "internal"
IMMUTABLE
PARALLEL SAFE
STRICT
AS 'varcharin';

CREATE FUNCTION myvarcharout(myvarchar)
RETURNS cstring
LANGUAGE "internal"
IMMUTABLE
PARALLEL SAFE
STRICT
AS 'varcharout';

CREATE FUNCTION myvarcharsend(myvarchar)
RETURNS BYTEA
LANGUAGE "internal"
STABLE
PARALLEL SAFE
STRICT
AS 'varcharsend';

CREATE FUNCTION myvarcharrecv(internal, OID, INT)
RETURNS myvarchar
LANGUAGE "internal"
STABLE
PARALLEL SAFE
STRICT
AS 'varcharrecv';

ALTER TYPE myvarchar SET (storage = extended);

CREATE TYPE myvarchar
(
  input = myvarcharin,
  output = myvarcharout,
  alignment = INT,
  storage = main
);

CREATE DOMAIN myvarchardom AS myvarchar;

ALTER TYPE myvarchar SET (storage = plain);

ALTER TYPE myvarchar SET (storage = extended);

ALTER TYPE myvarchar SET (send = myvarcharsend,
receive = myvarcharrecv,
typmod_in = varchartypmodin,
typmod_out = varchartypmodout,
analyze = ts_typanalyze,
subscript = raw_array_subscript_handler);

SELECT
  typinput,
  typoutput,
  typreceive,
  typsend,
  typmodin,
  typmodout,
  typanalyze,
  typsubscript,
  typstorage
FROM
  pg_type
WHERE
  typname = 'myvarchar';

SELECT
  typinput,
  typoutput,
  typreceive,
  typsend,
  typmodin,
  typmodout,
  typanalyze,
  typsubscript,
  typstorage
FROM
  pg_type
WHERE
  typname = '_myvarchar';

SELECT
  typinput,
  typoutput,
  typreceive,
  typsend,
  typmodin,
  typmodout,
  typanalyze,
  typsubscript,
  typstorage
FROM
  pg_type
WHERE
  typname = 'myvarchardom';

SELECT
  typinput,
  typoutput,
  typreceive,
  typsend,
  typmodin,
  typmodout,
  typanalyze,
  typsubscript,
  typstorage
FROM
  pg_type
WHERE
  typname = '_myvarchardom';

DROP FUNCTION myvarcharsend(myvarchar);

DROP TYPE myvarchar;

DROP TYPE myvarchar CASCADE;
